2008-06-30  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/dft.c:
	* operations/frequency/freq-general-filter.c: new op.
	* operations/frequency/idft.c:
	* operations/frequency/tools/Makefile.am: add filters.c
	* operations/frequency/tools/filters.c: new.

2008-06-30  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/tools/display.c: a small bug fixed.

2008-06-28  Zhang Junbo  <zhangjb@svn.gnome.org>

	The work of moving Transforming-opeartions into new format completed.

	* operations/frequency/dft.c: used the same size input/out buffer.
	* operations/frequency/idft.c: same as above.
	* operations/frequency/preview-frequency.c: same as above.

2008-06-28  Zhang Junbo  <zhangjb@svn.gnome.org>

	Now encode/decode works correctly.

	* operations/frequency/dft.c: testing encode.
	* operations/frequency/idft.c: testing decode.
	* operations/frequency/preview-frequency.c: testing decode.
	* operations/frequency/tools/fourier.c: now it was correct.

2008-06-28  Zhang Junbo  <zhangjb@svn.gnome.org>

	Added encode/decode functions in order to support odd-size image.

	* operations/frequency/tools/display.c: a small modify.
	* operations/frequency/tools/fourier.c: added encode/decode functions.

2008-06-28  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/preview-frequency.c: fixed a bug that forget to
	free memory.

2008-06-28  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/preview-frequency.c: moved to the new format.
	* operations/frequency/tools/display.c: added.

2008-06-28  Zhang Junbo  <zhangjb@svn.gnome.org>

	Moved to the new format successfully.

	* operations/Makefile.am: added the path: frequency.
	* operations/frequency/dft.c: the first step to move to the new format.
	* operations/frequency/idft.c: the first step to move to the new format.

2008-06-27  Zhang Junbo  <zhangjb@svn.gnome.org>

	Restart from trunck. Added dft.c first.

	* AUTHORS:
	* configure.ac:
	* operations/frequency/Makefile.am: