@@ -22,8 +22,11 @@
 #define ELEM_ID_HALF_MATRIX(x, y, c) ((y)*(FFT_HALF(c))+(x))
 #endif
 
+gboolean freq_multiply(gdouble, gdouble, gdouble, gint, gint);
+
 gboolean
-freq_multiply(gdouble *X_buf, gdouble *H_buf, gint width, gint height)
+freq_multiply(gdouble *X_buf, gdouble *H_buf, gdouble *Y_buf,
+              gint width, gint height)
 {
   return TRUE;
 }
