@@ -1,5 +1,10 @@
 2008-06-30  Zhang Junbo  <zhangjb@svn.gnome.org>
 
+	* operations/frequency/freq-general-filter.c: the property tested.
+	* operations/frequency/tools/filters.c: modified the parameter table.
+
+2008-06-30  Zhang Junbo  <zhangjb@svn.gnome.org>
+
 	* operations/frequency/dft.c:
 	* operations/frequency/freq-general-filter.c: new op.
 	* operations/frequency/idft.c:
